# TOEFL-Typing-Practice-App

./: .gitignore  README.md  project_change_log.md  pyproject.toml
src/toefl_typing_practice_app/: __init__.py  __main__.py  app.py  config.py  models.py  paths.py
src/toefl_typing_practice_app/content/: __init__.py  essay_generator.py  timed_challenge_bank.py  vocabulary_bank.py
src/toefl_typing_practice_app/services/: account_store.py  practice_history.py  practice_statistics.py  timed_challenge_scoring.py  typing_analysis.py  vocabulary_review.py  vocabulary_scoring.py
src/toefl_typing_practice_app/ui/: __init__.py  account_gate.py  essay_practice.py  main_window.py  review_center.py  stats_dashboard.py  timed_challenge.py  vocabulary_practice.py
tests/: __init__.py  _bootstrap.py  test_accounts_and_review.py  test_boundary_cases.py  test_generators_and_scoring.py  test_practice_history.py  test_statistics.py
